# pidarr

./: .gitignore  .nvim-dap.lua  Cargo.toml  README.md  index.html
pidarr-shared/: Cargo.toml
pidarr-shared/src/: lib.rs
src/: daemon.rs  main.rs
testing-services/: docker-compose.yml
web-gui/: Cargo.toml  index.html
web-gui/src/: main.rs
