[package]
name = "pidarr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }

anyhow = "1.0.97"
config = "0.15.11"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
pidarr-shared = { path = "pidarr-shared" }
toml = "0.8.22"
serde = "1.0.219"
axum = { version = "0.8.4", features = ["ws"] }
tower-http = { version = "0.6.4", features = ["fs"] }
radarr-api = { path = "./extern/radarr-api/" }
tdarr-api = { path = "./extern/tdarr-api/" }
